--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
