--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
