feat: Implement Teams API with full CRUD operations and integrate with existing School and Sport models

--- a/docs/sports.yaml
+++ b/docs/sports.yaml
@@ -7,7 +7,7 @@ info:
     security, rate limiting, and Swagger UI documentation.
 
 servers:
-  - url: /api/v1
+  - url: /api
     description: Base path for API version 1
 
 tags:
