--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
